--- a/src/components/molecules/gallerySection/GallerySection.scss
+++ b/src/components/molecules/gallerySection/GallerySection.scss
@@ -27,18 +27,23 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-grow: 0;
     gap: 1.87rem;
     position: relative;
     z-index: 0;
 
+    img {
+      max-width: 100%;
+    }
+
     &::after {
       content: "";
-      width: 99rem;
-      height: 6rem;
+      width: 95vw;
+      height: 7.5rem;
       background-color: $white;
       border-radius: 100%;
       position: absolute;
-      bottom: -1.5rem;
+      bottom: -3.2rem;
       left: 50%;
       transform: translateX(-50%);
       z-index: 1;
@@ -47,12 +52,12 @@
 
     &::before {
       content: "";
-      width: 99rem;
-      height: 6rem;
+      width: 95vw;
+      height: 7.5rem;
       background-color: $white;
       border-radius: 100%;
       position: absolute;
-      top: -1.8rem;
+      top: -3.3rem;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
