--- a/src/components/molecules/header/Header.scss
+++ b/src/components/molecules/header/Header.scss
@@ -5,8 +5,8 @@
   align-items: center;
   justify-content: space-between;
   position: absolute;
-
-  width: 100%;
+  z-index: 2;
+  width: 100vw;
   height: 4.76563rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.18);
 }
