--- a/src/components/molecules/hero/Hero.scss
+++ b/src/components/molecules/hero/Hero.scss
@@ -3,8 +3,7 @@
 .section__hero {
   background: $bgTopBlue;
   padding-block-start: 15.44rem;
-  // padding-block-end: 5rem;
-  z-index: -1;
+  z-index: 0;
   position: relative;
 
   .hero__images__top {
@@ -106,6 +105,10 @@
     background-size: cover;
     z-index: 1;
     height: 12.6875rem;
-    width: 100%;
+    width: 100vw;
+
+    img {
+      max-width: 100%;
+    }
   }
 }
