--- a/src/components/molecules/shopSection/ShopSection.scss
+++ b/src/components/molecules/shopSection/ShopSection.scss
@@ -22,7 +22,7 @@
     background-size: cover;
     z-index: 1;
     height: 12.6875rem;
-    width: 100%;
+    width: 100vw;
   }
 
   .contact__vector {
@@ -35,7 +35,11 @@
     background-size: cover;
     z-index: 1;
     height: 12.6875rem;
-    width: 100%;
+    width: 100vw;
+
+    img {
+      max-width: 100%;
+    }
   }
 
   .shop__title {
@@ -59,7 +63,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 3.98rem;
+    gap: 3rem;
     margin-block-end: 2.19rem;
 
     .cards__arrow {
