--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,8 @@
 section, header, footer {
   padding-inline: 4.75rem;
 }
+
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
